initialize romans folder. create index.html with form to collect number from user. create README.md with specs for page. create scripts.js to return the value of the users input and show results.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <script src="js/scripts.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css"  type="text/css">
-
-    <title></title>
+    <title>Roman Numeral Converter</title>
   </head>
   <body>
-
+    <div class="container">
+      <form class="roman-form">
+        <div class="jumbotron">
+          <h1>Roman Numeral Converter</h1>
+        </div>
+        <label for="number">Enter Number Here:</label>
+        <input type="number" name="number">
+        <button type="button" name="submit" id="submit-button">Submit Number!</button>
+      </form>
+      <div class="results">
+      </div>
+    </div>
   </body>
 </html>
