change input type number to include min and max between 1-3999 and not accept other characters. Change button to input type submit to show error message if other characters are entered in field.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <h1>Roman Numeral Converter</h1>
         </div>
         <label for="number">Enter Number Here:</label>
-        <input type="number" name="number">
-        <button type="button" name="submit" id="submit-button">Submit Number!</button>
+        <input type="number" name="number" min="1" max="3999">
+        <input type="submit">
       </form>
       <div class="results">
       </div>
